8247753: UIManager.getSytemLookAndFeelClassName() returns wrong value on Fedora 32

Reviewed-by: sgehwolf